# cxx-project

./: .gitignore  CMakeLists.txt  CPackSettings.cmake  Doxyfile  README.md
cmake/: AutoCPack.cmake  EnableCxx11.cmake
docs/incl/: footer.html
logo/: hello.icns  make-icon-osx.sh  make-icon-windows.sh  winicon.rc
src/: CMakeLists.txt
test/: CMakeLists.txt  main.cpp
